# MXB2026-Khulna-IU_CSE-JananiAI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TODO.md
Code/: chatbot.php  index.html  script.js  style.css
data/synthetic/: README.md  data_generator.py  data_ingestor.py  data_matcher.py  knowledge_generator.py  knowledges-01.txt  knowledges.txt  pyproject.toml  synthetic_bdhs_10k.csv
notebooks/: experiments.ipynb
src/app/: main.py  pyproject.toml  requirements.txt
src/frontend/: index.html  script.js  style.css
